--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             const hours = Math.floor(difference / (1000 * 60 * 60)) % 24;
             const days = Math.floor(difference / (1000 * 60 * 60 * 24));
 
-            const price = days*4500000+(hours*4500000/24)+(minutes*4500000/(24*60))+seconds*4500000/(24*60*60)
+            const price = days*4500000+(hours*4500000/24)+(minutes*4500000/(24*60))+seconds*4500000/(24*60*60);
 
             // Format the output
             timeSinceElement.textContent = 
                 `${days} days, ${hours} hours, ${minutes} minutes, ${seconds} seconds`;
-        }
+        
 
             cashFlushedElement.textContent = 
                 `${price} dollars wasted`;
