--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         
 
             cashFlushedElement.textContent = 
-                `${displayPrice} dollars wasted`;
+                "$"+`${displayPrice} wasted`;
         }
 
         // Update the counter every second
