--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Cash Flush 2025</title>
 </head>
 <body>
-    <h1>Time Since Government shutdown</h1>
-    <p id="time-since"></p>
-    
-     <p id="cash-flushed"></p>
+    <h1>Time Since Government Shutdown</h1>
+    <h3 id="time-since"></p>
+    <h1>Total Cash Flushed Down Toilet</h1>
+     <h3 id="cash-flushed"></p>
 
     <script>
         // Set the past date and time (e.g., January 1, 2023, 00:00:00)
