--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cash Flush 2025</title>
 </head>
+
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        text-align: center;
+        margin-top: 50px;
+        background-color: black;
+    }
+    h1 {
+        color: red;
+        font-size: 3em;
+    }
+    h3 {
+        color: red;
+        font-size: 2em;
+    }
+
+</style>
 <body>
     <h1>Time Since Government Shutdown</h1>
     <h3 id="time-since"></p>
