--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 <body>
     <h1>Time Since Government Shutdown</h1>
     <h3 id="time-since"></p>
-    <h1>Total Cash Flushed Down Toilet</h1>
+    <h1>Total Furloughed SnB Wasted</h1>
      <h3 id="cash-flushed"></h3>
-    <h1>Hours of Work Not Done</h1>
+    <h1>Federal Furlough Hours Wasted</h1>
     <h3 id="effort-wasted"></h3>
 
     <script>
