--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <h1>Time Since Government Shutdown</h1>
     <h3 id="time-since"></p>
-    <h1>Total Furloughed SnB Wasted</h1>
+    <h1>Total Furlough SnB Dollars Wasted</h1>
      <h3 id="cash-flushed"></h3>
     <h1>Federal Furlough Hours Wasted</h1>
     <h3 id="effort-wasted"></h3>
