--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         
 
             cashFlushedElement.textContent = 
-                "$"+`${displayPrice} wasted`;
+                "$"+`${displayPrice}`;
             effortWastedElement.textContent = 
-                `${displayHoursWasted} work hours wasted`;
+                `${displayHoursWasted} work hours`;
         }
 
         // Update the counter every second
