--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 </style>
 <body>
-    <h1>Time Since Government Shutdown</h1>
+    <h1>2025 Government Shutdown</h1>
     <h3 id="time-since"></p>
     <h1>Total Furlough SnB Dollars Wasted</h1>
      <h3 id="cash-flushed"></h3>
